2007-07-09  Akim Demaille  <demaille@gostai.com>

	libport.la
	* libport/libport.mk (noinst_LTLIBRARIES): Build libport.la.
	* libport/tests/Makefile.am: Use it.
	* libport/libport-sources.mk (libport_la): New.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	Fixes
	* libport/containers.hh: Formatting changes.
	* libport/fwd.hh: Don't try to fwddecl hash.
	Fwddecl Symbol.
	* libport/hash.hh: Be ready to hash on Symbols.
	* libport/indent.cc: Use cassert.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	libport::indent
	* hash.hh: Formatting changes.
	* indent.cc, indent.hh: New.
	* README, fwd.hh, libport.mk, libport-sources.mk: Update.
	* tests/test-indent.cc: New.
	* tests/Makefile.am: Adjust.

2007-07-09  Akim Demaille  <demaille@gostai.com>

	Ref couted pointer on top of boost
	* shared-ref.hh, shared-ref.hxx: New.

2007-07-06  Akim Demaille  <demaille@gostai.com>

	Make hash table simpler to use
	* hash.hh: Don't define libport::hash_map_type, just use
	using to import hash_map into libport.

2007-05-25  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add missing include.
	* network.h: Incude our own unistd.h.

2007-05-25  mefyl  <mefyl@lrde.epita.fr>

	Add missing include.
	* unistd.h: Include 'config.h' to detect <unistd.h>.

2007-05-11  Akim Demaille  <demaille@gostai.com>

	select-const and symbols
	* select-const.hh, symbol.cc, symbol.hh, symbol.hxx: New.
	* fwd.hh, libport-sources.mk, libport.mk: Adjust.

2007-04-10  POTHIER Benoit  <pothier@gostai.com>

	Be more verbose in semaphores. Fix windows return values.
	* exception.hh: Add libport namespace.
	* exception.hxx: Same.
	* semaphore.hxx: Fix return values and add disnostic messages.

2007-04-10  POTHIER Benoit  <pothier@gostai.com>

	Fix windows compilation.
	* libport.mk: Add missing exception headers.
	* semaphore.hxx: Fix string use.

2007-04-10  POTHIER Benoit  <pothier@gostai.com>

	Be more verbose if semaphore calls are failing.
	* exception.hh: New.
	* exception.hxx: New.