@@ -1,0 +1,15 @@
+/**
+ ** \file libport/deref.cc
+ ** \brief Implementation for libport/deref.hh
+ */
+
+# include "libport/deref.hh"
+
+namespace libport
+{
+
+  Deref::Deref (std::ostream& o)
+    : ostr_ (o)
+  { }
+
+}
