@@ -17,6 +17,8 @@ libportsysdir = $(libportdir)/sys
 
 # Sources to compile to use libport.
 libport_sources = 				\
+	$(libport_srcdir)/contract.cc		\
+	$(libport_srcdir)/deref.cc		\
 	$(libport_srcdir)/indent.cc		\
 	$(libport_srcdir)/escape.cc		\
 	$(libport_srcdir)/symbol.cc
