@@ -1,3 +1,15 @@
+2007-07-11  Akim Demaille  <demaille@gostai.com>
+
+	Add contract, deref, and separator.
+	* libport/contract.cc, libport/contract.hh, libport/deref.cc,
+	* libport/deref.hh, libport/deref.hxx, libport/separator.hh,
+	* libport/separator.hxx, libport/tests/test-deref.cc,
+	* libport/tests/test-separator.cc:
+	New.
+	* libport/libport-sources.mk, libport/libport.mk, libport/README,
+	* libport/tests/Makefile.am:
+	Update.
+
 2007-07-09  Akim Demaille  <demaille@gostai.com>
 
 	libport.la
